--- a/hw3/index.html
+++ b/hw3/index.html
@@ -7,16 +7,40 @@
     <link rel="stylesheet" href="./style.css"
   </head>
   <body>
-    <h2 class="title">lorem lorem</h2>
-    <p>asdsadasdsadsadsad</p>
+    <h1 class="title" Заголовок></h1>
+    <h1>Заголовок</h1>
 
-    <h2>lorem lorem</h2>
+    <p>
+      Здесь находится пример стиля для текста. Цвет текста красный, межстрочное
+      расстояние 1.5 и отступ снизу 20 пикселей , а снизу будет пример стиля для
+      ссылок
+    </p>
+    <a href="https://github.com/stargame751/homework-HillelMazin.git"
+      >Ссылка на гитхаб</a
+    >
 
     <style>
-      .title {
+      a {
+        font-size: 52px;
+        color: blue;
+        background: black;
+      }
+      a:hover {
         color: red;
-        font-size: 30px;
-        text-align: right;
+        text-decoration: underline;
+      }
+      p {
+        font-size: 52px;
+        line-height: 1.5;
+        margin-bottom: 20px;
+        background: red;
+      }
+      h1 {
+        font-size: 42px;
+        color: black;
+        text-align: center;
+        margin-top: 20px;
+        background: green;
       }
     </style>
   </body>
