--- a/hw-minions/index.html
+++ b/hw-minions/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link ref="stylesheet" href="/reset.css" />
-    <link ref="stylesheet" href="/style.css" />
+    <link ref="stylesheet" href="../styles/reset.css" />
   </head>
   <body>
     <div class="container">
@@ -87,7 +86,6 @@
     </div>
     <style>
       .container {
-        height: 892px;
         max-width: 1400px;
         border: 1px;
         background-color: #b0c6ff;
@@ -95,19 +93,21 @@
       }
       .title {
         text-align: center;
+        margin: -10px 367px 45px;
+        font-weight: 700;
+        font-size: 48px;
+        color: white;
+        border: 1px;
       }
       .minion {
       }
       .cards {
-        width: 1076px;
-        height: 742px;
-        background-color: #b0c6ff;
         font-size: 12px;
         text-align: center;
         margin-right: 62px;
         margin-left: 62px;
         margin-bottom: 15px;
-        margin-top: 135px;
+        /* margin-top: 135px; */
       }
       .card-item {
         width: 239px;
