change hw-site and add new hw

--- a/hw-site/index.html
+++ b/hw-site/index.html
@@ -50,7 +50,8 @@
           early <br />
           16th century.
         </p>
-      </div>
+    </div>
+   <div class="proj">
     <div class="container2">
       <div class="projects">
         <div class="project-items"></div>
@@ -94,7 +95,8 @@
         </div> -->
        </div>
       </div>
-      </div>
+      
+   </div>
       <div class="container-video">
         <div class="video">
           <div class="how-do-you-work">
@@ -139,24 +141,27 @@
     </div>
 
     <style>
+
       .container {
         max-width: 1200px;
         margin: 0 auto;
+        width: 100%;
+        box-sizing:border-box;
       }
       div.container{
         background-color: #EEEFF1;
       }
       .nav {
-        padding:79px 0 0 200px;
+        /* padding:79px 0 0 200px; */
       }
-      nav ul {
+      /* nav ul {
         margin: 0;
         padding: 0 42px 0 0;
-      }
+      } */
       nav ul li {
         display: inline;
         color: black;
-        padding: 0 42px 0 0;
+        /* padding: 0 42px 0 0; */
       }
       .navigation-menu {
         font-weight: 400;
