--- a/hw-site3/index.html
+++ b/hw-site3/index.html
@@ -54,9 +54,232 @@
         </div>
       </header>
       <div class="bg-container">
-        <div class="container"></div>
+        <div class="container">
+          <div class="title">
+            <h2 class="sell-text">
+              Get Your Best Cosmetic<br />
+              Products Here
+            </h2>
+          </div>
+          <div class="info">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and <br />
+              typesetting industry. Lorem Ipsum has been the industry's <br />
+              standard dummy
+            </p>
+          </div>
+          <div class="search">
+            <input type="text" class="box" />
+            <p class="search2">Search...</p>
+            <button class="search-button">
+              <img src="../img/Screenshot_4.png" alt="#" />
+            </button>
+          </div>
+          <button class="shop-now">
+            <p>Shop now</p>
+          </button>
+        </div>
       </div>
     </div>
+    <div class="logo">
+      <div class="container">
+        <img src="../img/logo.png" alt="#" class="logo-box" />
+      </div>
+    </div>
+    <div class="main">
+      <div class="container">
+        <h3 class="product">Our Popular Product</h3>
+        <div class="main-flex2">
+          <p class="info">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.<br />
+            Lorem Ipsum has been the industry's standard dummy
+          </p>
+          <a href="#" class="product2">Discover Our Products &rarr;</a>
+        </div>
+        <div class="main-flex2">
+          <div class="main1">
+            <img src="../img/bottle1.png" alt="#" class="bottle1" />
+            <h2 class="cosmetic">Cosmetic Products</h2>
+            <p class="info">
+              Lorem Ipsum is simply dummy text of the printing and<br />
+              typesetting industry. Lorem Ipsum has been the industry's<br />
+              standard dummy
+            </p>
+            <div class="button-group">
+              <button class="button1">
+                <p class="buttontext1">Buy Now</p>
+              </button>
+              <button class="button2">
+                <p class="buttontext1">Add To Cart</p>
+              </button>
+              <span class="dollar">120$</span>
+            </div>
+          </div>
+          <div class="main2">
+            <img src="../img/bottle2.png" alt="#" class="bottle2" />
+            <h2 class="cosmetic">Cosmetic Products</h2>
+            <p class="info">
+              Lorem Ipsum is simply dummy text of the printing and<br />
+              typesetting industry. Lorem Ipsum has been the industry's<br />
+              standard dummy
+            </p>
+            <div class="button-group">
+              <button class="button1">
+                <p class="buttontext1">Buy Now</p>
+              </button>
+              <button class="button2">
+                <p class="buttontext1">Add To Cart</p>
+              </button>
+              <span class="dollar">120$</span>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="main-flex2">
+          <div class="button-group">
+            <button class="button1">
+              <p>Buy Now</p>
+            </button>
+            <button class="button2">
+              <p>Add To Cart</p>
+            </button>
+          </div>
+          <span class="dollar">
+            <p>120$</p>
+          </span>
+        </div> -->
+      </div>
+    </div>
+    <div class="main4">
+      <div class="container">
+        <div class="flex-main4">
+          <div class="organic">
+            <span class="organic-value">100%</span>
+            <p class="info">Organic Products</p>
+          </div>
+          <div class="sales">
+            <span class="sale">2M+</span>
+            <p class="info">Yearly Sales</p>
+          </div>
+          <div class="customer">
+            <span class="customar">1.9M+</span>
+            <p class="info">Happy Customar</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="beauty">
+      <div class="container">
+        <div class="main5">
+          <div class="part1">
+            <h3 class="product">
+              The Perfect Beauty<br />
+              Of You
+            </h3>
+            <p class="info">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+              <br />
+              It has survived not only five centuries, but also the leap into
+              electronic typesetting, remaining essentially unchanged. Lorem
+              Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <button class="shop-now">
+              <p>Shop now</p>
+            </button>
+          </div>
+          <div class="part2">
+            <img src="../img/bottle3.png" alt="#" class="bottle3" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main6">
+      <div class="container">
+        <div class="flex-box4">
+          <div class="smile">
+            <img src="../img/smile.png" alt="#" class="smilee" />
+          </div>
+          <div class="stars">
+            <h1 class="amazing">Amazing Cosmetic</h1>
+            <img src="../img/stars.png" alt="#" class="star" />
+            <p class="info">
+              Lorem Ipsum is simply dummy text of the printing and
+              typesetting<br />
+              industry. Lorem Ipsum has been the industry's standard dummy
+              text<br />
+              ever since the 1500s, when an unknown printer took a galley of
+              type<br />
+              and scrambled it to make a type specimen book
+            </p>
+            <h1 class="amazing">Rusmin Islam</h1>
+            <p class="info">Designer</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="flex-box5">
+          <h1 class="subscribe">Subscribe To Get Our Latest News</h1>
+          <div class="input">
+            <input type="text" class="box2" />
+            <p class="email">Enter email</p>
+            <button class="subscribe-button">
+              <p class="subscribe-button-color">Subscribe</p>
+            </button>
+          </div>
+        </div>
+        <div class="flex-box6">
+          <div class="leftfooter">
+            <div class="logo2">
+              <a href="#" class="dudeshape2">
+                <p>Dudeshape</p>
+              </a>
+            </div>
+            <p class="info">
+              Lorem Ipsum is simply dummy text of the<br />
+              printing and typesetting industry. Lorem<br />
+              Ipsum has been the industry's standard<br />
+              dummy
+            </p>
+          </div>
+          <div class="centerfooter">
+            <div class="nav2">
+              <div class="navigation-menu2">
+                <ul class="nav-items2">
+                  <li class="nav-item">
+                    <a href="#" class="QuickLink">Quick Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="Home2">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="Products2">Products</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#" class="About">About Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="rightfooter">
+            <div class="contactinfo">
+              <p class="contact2">
+                <p class="contacttitle">Contact Us</p>
+                <p>oyasimnaeem@email.com</p>
+                <p>+123456789</p>
+                <img src="../img/medialink.png" alt="#" class="medialink">
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <style>
       .container {
         max-width: 1200px;
@@ -68,7 +291,7 @@
         height: 100%;
         background-image: url(./bg.jpg);
         background-repeat: no-repeat;
-        background-position: right bottom;
+        background-position: 938px -10px;
       }
       .wrapper {
         background-color: #f9f6f5;
@@ -91,11 +314,225 @@
       .header {
         display: flex;
         justify-content: space-between;
+        max-width: 1200;
+        margin: 0 auto;
       }
       .nav-items {
         display: inline-flex;
         justify-content: space-between;
         align-items: center;
+      }
+      .title {
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 56px;
+        line-height: 70px;
+      }
+      .info {
+        font-family: red hat display;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 32px;
+      }
+      .search-button {
+        padding-block: 0px;
+        padding-inline: 0px;
+      }
+      .box {
+        padding: 10px 77px;
+        position: relative;
+      }
+      .search2 {
+        position: absolute;
+        top: 478px;
+        left: 170px;
+        font-family: red hat display;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+      }
+      .search-button {
+        position: absolute;
+        top: 483px;
+        left: 420px;
+      }
+      .shop-now {
+        background-color: #402f2c;
+        color: white;
+        padding: 16px 32px 16px 32px;
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 24px;
+        margin-top: 50px;
+      }
+      .logo-box {
+        margin: 130px 25px 130px 25px;
+      }
+      .product {
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 56px;
+        line-height: 70px;
+      }
+      .product2 {
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 30px;
+        color: #222222;
+      }
+      .main-flex2 {
+        display: flex;
+        justify-content: space-between;
+      }
+      .button-group {
+        display: flex;
+        justify-content: space-between;
+        /* width: 323px;
+        height: 56px; */
+        border: 1px;
+        margin-right: 150px;
+      }
+      .button1 {
+        background-color: #402f2c;
+        color: white;
+        padding: 16px 32px 16px 32px;
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 24px;
+      }
+      .button2 {
+        background-color: white;
+        color: #402f2c;
+        padding: 16px 32px 16px 32px;
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 24px;
+      }
+      .buttontext1 {
+        margin: 0 0;
+      }
+      .dollar {
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 55px;
+        text-align: right;
+      }
+      .flex-main4 {
+        display: flex;
+        justify-content: space-between;
+        font-family: red hat display;
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 70px;
+        margin: 100px 50px 50px 50px;
+      }
+      .customar {
+        border-bottom: 3px solid black;
+      }
+      .sale {
+        border-bottom: 3px solid black;
+      }
+      .organic-value {
+        border-bottom: 3px solid black;
+      }
+      .main5 {
+        display: flex;
+        justify-content: space-between;
+      }
+      .product {
+        margin: 0 0;
+      }
+      .info {
+        margin: 0 0;
+      }
+      .amazing {
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 40px;
+      }
+      .flex-box4 {
+        display: flex;
+        justify-content: space-between;
+      }
+      .stars {
+        margin: 100px 0 0 54px;
+      }
+      .smile {
+        margin: 100px 0 0 0;
+      }
+      .flex-box5 {
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px solid #dddddd;
+        margin-top: 100px;
+      }
+      .subscribe {
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 36px;
+        line-height: 46px;
+      }
+      .box2 {
+        position: relative;
+        width: 386px;
+        height: 56px;
+        margin-top: 20px;
+        border: 1px solid #dddddd;
+      }
+      .email {
+        position: absolute;
+        top: 3613px;
+        left: 972px;
+        font-weight: 400;
+        font-family: red hat display;
+        font-size: 16px;
+      }
+      .subscribe-button {
+        position: absolute;
+        width: 103px;
+        height: 40px;
+        top: 3618px;
+        left: 1228px;
+        background-color: black;
+      }
+      .subscribe-button-color {
+        color: white;
+        font-family: red hat display;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 20px;
+        margin-top: 8px;
+      }
+      .flex-box6 {
+        display: flex;
+        justify-content: space-between;
+      }
+      .dudeshape2 {
+        font-family: red hat display;
+        color: #222222;
+        font-weight: 700;
+        font-size: 24px;
+      }
+      .nav-items2 {
+        display:flex;
+        flex-direction: column;
+        row-gap:30px;
+      }
+      .rightfooter {
+        display: flex;
+    flex-direction: column;
+    row-gap: 0px;
+      }
+      .nav-items2 {
+        font-family: red hat display;
+    font-weight: 400;
+    font-size: 16px;
       }
     </style>
   </body>
