--- a/hw-site2/index.html
+++ b/hw-site2/index.html
@@ -28,7 +28,7 @@
         <div class="design">
           <h3>Design and Layout</h3>
         </div>
-        <div class="lorem">
+        <div class="lorem lorem__one">
           <p>
             Lorem Ipsum is fish text often used in print and web design. Lorem
             Ipsum <br />
@@ -47,7 +47,7 @@
           <h2 class="about-me">
             <h2>About Me</h2>
           </h2>
-          <p class="lorem-two">
+          <p class="lorem lorem__three">
             About meLorem Ipsum is fish text often used in print and web
             design.<br />
             Lorem Ipsum has been the standard "fish" for Latin texts since the
@@ -73,7 +73,7 @@
             </div>
             <img src="../img/img1.jpg" alt="#" class="card" />
             <div class="text">
-              <h1 class="h1text">40+</h1>
+              <h1 class="h1text h1text__red">40+</h1>
               <p class="project-text">projects</p>
             </div>
             <img src="../img/img1.jpg" alt="#" class="card" />
@@ -102,7 +102,7 @@
             <h2>How Do I Work</h2>
           </h2>
         </div>
-        <div class="lorem-two">
+        <div class="lorem lorem__two">
           <p>
             Lorem Ipsum is fish text often used in print and web design. Lorem
             Ipsum <br />
@@ -307,6 +307,18 @@
       }
       .card:first-child{
         margin:0;
+      }
+      .lorem__three {
+        color:blue;
+      }
+      .lorem__two {
+        color:red;
+      }
+      .lorem__one{
+        color:yellow;
+      }
+      .h1text__red{
+        color:red;
       }
     </style>
   </body>
