--- a/hw-site3/index.html
+++ b/hw-site3/index.html
@@ -176,7 +176,7 @@
               The Perfect Beauty<br />
               Of You
             </h3>
-            <p class="info">
+            <p class="info info_info2">
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
               ever since the 1500s, when an unknown printer took a galley of
@@ -216,7 +216,7 @@
               and scrambled it to make a type specimen book
             </p>
             <h1 class="amazing">Rusmin Islam</h1>
-            <p class="info">Designer</p>
+            <p class="info info_designer">Designer</p>
           </div>
         </div>
       </div>
@@ -251,7 +251,7 @@
             <div class="nav2">
               <div class="navigation-menu2">
                 <ul class="nav-items2">
-                  <li class="nav-item">
+                  <li class="nav-item nav-item__black">
                     <a href="#" class="QuickLink">Quick Link</a>
                   </li>
                   <li class="nav-item">
@@ -333,6 +333,7 @@
         font-weight: 400;
         font-size: 20px;
         line-height: 32px;
+        margin:0;
       }
       .search-button {
         padding-block: 0px;
@@ -344,7 +345,7 @@
       }
       .search2 {
         position: absolute;
-        top: 478px;
+        top: 577px;
         left: 170px;
         font-family: red hat display;
         font-weight: 400;
@@ -353,8 +354,14 @@
       }
       .search-button {
         position: absolute;
-        top: 483px;
+        top: 582px;
         left: 420px;
+      }
+      .login-menu {
+        margin: 27px 10px 0 80px;
+      }
+      .logo {
+        margin: 8px 0px 50px 140px;
       }
       .shop-now {
         background-color: #402f2c;
@@ -364,7 +371,7 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 24px;
-        margin-top: 50px;
+        margin-top: 45px;
       }
       .logo-box {
         margin: 130px 25px 130px 25px;
@@ -381,6 +388,7 @@
         font-size: 24px;
         line-height: 30px;
         color: #222222;
+        margin-top: 60px;
       }
       .main-flex2 {
         display: flex;
@@ -429,7 +437,7 @@
         font-weight: 700;
         font-size: 56px;
         line-height: 70px;
-        margin: 100px 50px 50px 50px;
+        margin: 130px 50px 130px 50px;
       }
       .customar {
         border-bottom: 3px solid black;
@@ -445,16 +453,17 @@
         justify-content: space-between;
       }
       .product {
-        margin: 0 0;
+        margin: 0px 0px 20px 0;
       }
       .info {
-        margin: 0 0;
+        margin:60px 0;
       }
       .amazing {
         font-family: red hat display;
         font-weight: 500;
         font-size: 30px;
         line-height: 40px;
+        margin: 0;
       }
       .flex-box4 {
         display: flex;
@@ -487,7 +496,7 @@
       }
       .email {
         position: absolute;
-        top: 3613px;
+        top: 4320px;
         left: 972px;
         font-weight: 400;
         font-family: red hat display;
@@ -497,7 +506,7 @@
         position: absolute;
         width: 103px;
         height: 40px;
-        top: 3618px;
+        top: 4325px;
         left: 1228px;
         background-color: black;
       }
@@ -523,16 +532,45 @@
         display:flex;
         flex-direction: column;
         row-gap:30px;
+        margin: 30px;
       }
       .rightfooter {
         display: flex;
     flex-direction: column;
     row-gap: 0px;
+    font-family: 'Red Hat Display';
       }
       .nav-items2 {
         font-family: red hat display;
     font-weight: 400;
     font-size: 16px;
+      }
+      .cosmetic {
+        font-family: red hat display;
+        font-weight: 500;
+        font-size:40px;
+        line-height: 60px;
+      }
+      .beauty {
+        margin: 130px 0 130px 0;
+      }
+      .leftfooter {
+        margin: 0px 0px 50px 100px;
+      }
+      .contactinfo {
+        margin: 15px 50px 0px 0;
+      }
+      .info_info2 {
+        margin:0;
+      }
+      .info_designer {
+        margin:0;
+      }
+      .nav-item {
+        display:flex;
+      }
+      .nav-item__black {
+        color:black;
       }
     </style>
   </body>
