--- a/hw-site3/index.html
+++ b/hw-site3/index.html
@@ -42,19 +42,19 @@
         <div class="login-menu">
           <div class="login-items">
             <a href="#" class="login-item">
-              <img src="../img/Screenshot_1.png" />
+              <img src="./img/Screenshot_1.png" />
             </a>
             <a href="#" class="login-item">
-              <img src="../img/Screenshot_2.png" />
+              <img src="./img/Screenshot_2.png" />
             </a>
             <a href="#" class="login-item">
-              <img src="../img/Screenshot_3.png" />
+              <img src="./img/Screenshot_3.png" />
             </a>
           </div>
         </div>
       </header>
       <div class="bg-container">
-        <div class="container">
+        <div class="container container__test">
           <div class="title">
             <h2 class="sell-text">
               Get Your Best Cosmetic<br />
@@ -72,7 +72,7 @@
             <input type="text" class="box" />
             <p class="search2">Search...</p>
             <button class="search-button">
-              <img src="../img/Screenshot_4.png" alt="#" />
+              <img src="./img/Screenshot_4.png" alt="#" />
             </button>
           </div>
           <button class="shop-now">
@@ -83,7 +83,7 @@
     </div>
     <div class="logo">
       <div class="container">
-        <img src="../img/logo.png" alt="#" class="logo-box" />
+        <img src="./img/logo.png" alt="#" class="logo-box" />
       </div>
     </div>
     <div class="main">
@@ -99,7 +99,7 @@
         </div>
         <div class="main-flex2">
           <div class="main1">
-            <img src="../img/bottle1.png" alt="#" class="bottle1" />
+            <img src="./img/bottle1.png" alt="#" class="bottle1" />
             <h2 class="cosmetic">Cosmetic Products</h2>
             <p class="info">
               Lorem Ipsum is simply dummy text of the printing and<br />
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="main2">
-            <img src="../img/bottle2.png" alt="#" class="bottle2" />
+            <img src="./img/bottle2.png" alt="#" class="bottle2" />
             <h2 class="cosmetic">Cosmetic Products</h2>
             <p class="info">
               Lorem Ipsum is simply dummy text of the printing and<br />
@@ -192,7 +192,7 @@
             </button>
           </div>
           <div class="part2">
-            <img src="../img/bottle3.png" alt="#" class="bottle3" />
+            <img src="./img/bottle3.png" alt="#" class="bottle3" />
           </div>
         </div>
       </div>
@@ -201,11 +201,11 @@
       <div class="container">
         <div class="flex-box4">
           <div class="smile">
-            <img src="../img/smile.png" alt="#" class="smilee" />
+            <img src="./img/smile.png" alt="#" class="smilee" />
           </div>
           <div class="stars">
             <h1 class="amazing">Amazing Cosmetic</h1>
-            <img src="../img/stars.png" alt="#" class="star" />
+            <img src="./img/stars.png" alt="#" class="star" />
             <p class="info">
               Lorem Ipsum is simply dummy text of the printing and
               typesetting<br />
@@ -222,7 +222,7 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="container">
+      <div class="container container__test">
         <div class="flex-box5">
           <h1 class="subscribe">Subscribe To Get Our Latest News</h1>
           <div class="input">
@@ -273,7 +273,7 @@
                 <p class="contacttitle">Contact Us</p>
                 <p>oyasimnaeem@email.com</p>
                 <p>+123456789</p>
-                <img src="../img/medialink.png" alt="#" class="medialink">
+                <img src="./img/medialink.png" alt="#" class="medialink">
               </p>
             </div>
           </div>
@@ -295,7 +295,6 @@
       }
       .wrapper {
         background-color: #f9f6f5;
-        height: 747px;
       }
       .dudeshape {
         font-family: red hat display;
@@ -314,7 +313,7 @@
       .header {
         display: flex;
         justify-content: space-between;
-        max-width: 1200;
+        max-width: 1200px;
         margin: 0 auto;
       }
       .nav-items {
@@ -345,8 +344,10 @@
       }
       .search2 {
         position: absolute;
-        top: 577px;
-        left: 170px;
+        /* top: 577px;
+        left: 170px; */
+        top:66%;
+        left:2%;
         font-family: red hat display;
         font-weight: 400;
         font-size: 14px;
@@ -354,14 +355,14 @@
       }
       .search-button {
         position: absolute;
-        top: 582px;
-        left: 420px;
+        top: 67%;
+        left: 24%;
+      }
+      .container__test {
+        position: relative;
       }
       .login-menu {
-        margin: 27px 10px 0 80px;
-      }
-      .logo {
-        margin: 8px 0px 50px 140px;
+        margin: 23px 0px 0 0px;
       }
       .shop-now {
         background-color: #402f2c;
@@ -496,8 +497,8 @@
       }
       .email {
         position: absolute;
-        top: 4320px;
-        left: 972px;
+        top: 6%;
+        left: 70%;
         font-weight: 400;
         font-family: red hat display;
         font-size: 16px;
@@ -506,8 +507,8 @@
         position: absolute;
         width: 103px;
         height: 40px;
-        top: 4325px;
-        left: 1228px;
+        top: 7%;
+        left: 91%;
         background-color: black;
       }
       .subscribe-button-color {
