change hw mistakes

--- a/hw-site3/index.html
+++ b/hw-site3/index.html
@@ -541,6 +541,9 @@
     row-gap: 0px;
     font-family: 'Red Hat Display';
       }
+      .main4 {
+        background-color:#FDF8F5;
+      }
       .nav-items2 {
         font-family: red hat display;
     font-weight: 400;
